force-app/main/default/objects/Agreement__c/fields/Escalation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Amount__c</fullName>
    <label>Escalation Amount (TBD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>