force-app/main/default/objects/Agreement__c/fields/Escalation_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Date__c</fullName>
    <label>Initial Escalation Date**</label>
    <type>Date</type>
</CustomField>