force-app/main/default/objects/Agreement__c/fields/Escalation_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Frequency__c</fullName>
    <label>Escalation Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Escalating every 12 months</fullName>
            </value>
            <value>
                <fullName>Escalating every 60 months</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
                <isActive>false</isActive>
                <label>Annually</label>
            </value>
            <value>
                <fullName>One - Time</fullName>
                <isActive>false</isActive>
                <label>One - Time</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
                <isActive>false</isActive>
                <label>Quarterly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>