force-app/main/default/objects/Agreement__c/fields/Escalation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Percentage__c</fullName>
    <label>Escalation Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>