force-app/main/default/objects/Agreement__c/fields/Estimated_Survey_Fee__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Survey_Fee__c</fullName>
    <label>Estimated Survey Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>