force-app/main/default/objects/Agreement__c/fields/Estimated_Title_Escrow_Fees__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Title_Escrow_Fees__c</fullName>
    <label>Estimated Title/Escrow Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>