force-app/main/default/objects/Agreement__c/fields/Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclusivity</label>
    <type>Checkbox</type>
</CustomField>