force-app/main/default/objects/Agreement__c/fields/Executed_Not_Commenced__c.field-meta.xml
<CustomField>
    <fullName>Executed_Not_Commenced__c</fullName>
    <formula>IF(Is_Commenced__c, 0,  Initial_Rent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Executed - Not Commenced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>