force-app/main/default/objects/Agreement__c/fields/Executed_SLA__c.field-meta.xml
<CustomField>
    <fullName>Executed_SLA__c</fullName>
    <formula>IF( ISBLANK(Anchor_Agreement__r.Contract_Fully_Executed__c), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Executed SLA</label>
    <type>Checkbox</type>
</CustomField>