force-app/main/default/objects/Agreement__c/fields/Expiration__c.field-meta.xml
<CustomField>
    <fullName>Expiration__c</fullName>
    <label>Expiration Date**(TBD)</label>
    <type>Date</type>
</CustomField>