force-app/main/default/objects/Agreement__c/fields/Extension_Term_Length__c.field-meta.xml
<CustomField>
    <fullName>Extension_Term_Length__c</fullName>
    <label>Extension Term Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>