force-app/main/default/objects/Agreement__c/fields/FA__c.field-meta.xml
<CustomField>
    <fullName>FA__c</fullName>
    <formula>Project__r.FA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FA</label>
    <type>Text</type>
</CustomField>