force-app/main/default/objects/Agreement__c/fields/Final_Term_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Term_Expiration_Date__c</fullName>
    <label>Final Term Expiration Date**</label>
    <type>Date</type>
</CustomField>