force-app/main/default/objects/Agreement__c/fields/Finance_Notified_of_Termination__c.field-meta.xml
<CustomField>
    <fullName>Finance_Notified_of_Termination__c</fullName>
    <label>Finance Notified of Termination</label>
    <type>Date</type>
</CustomField>