force-app/main/default/objects/Agreement__c/fields/First_Uplift_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Uplift_Date__c</fullName>
    <label>First Uplift Date</label>
    <type>Date</type>
</CustomField>