force-app/main/default/objects/Agreement__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <formula>Site__r.strk__Street_Address__c +  Text(Site__r.strk__State__c) +  Site__r.strk__City__c + Site__r.strk__Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>