force-app/main/default/objects/Agreement__c/fields/Fully_Executed_Bill_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Fully_Executed_Bill_of_Sale__c</fullName>
    <label>Fully Executed Bill of Sale</label>
    <type>Date</type>
</CustomField>