force-app/main/default/objects/Agreement__c/fields/GLBO__c.field-meta.xml
<CustomField>
    <fullName>GLBO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GLBO</label>
    <type>Checkbox</type>
</CustomField>