force-app/main/default/objects/Agreement__c/fields/GLBO_Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>GLBO_Agreement_Type__c</fullName>
    <label>GLBO Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fee Simple Purchase</fullName>
            </value>
            <value>
                <fullName>Term Easement</fullName>
            </value>
            <value>
                <fullName>Perpetual Easement</fullName>
            </value>
            <value>
                <fullName>Prepaid Amendment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>