force-app/main/default/objects/Agreement__c/fields/GLBO_Term_years__c.field-meta.xml
<CustomField>
    <fullName>GLBO_Term_years__c</fullName>
    <label>GLBO Term (years)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>