force-app/main/default/objects/Agreement__c/fields/Ground_Interest__c.field-meta.xml
<CustomField>
    <fullName>Ground_Interest__c</fullName>
    <label>Ground Interest</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Agreement_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Easement (Day 1)</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>