force-app/main/default/objects/Agreement__c/fields/Ground_Lease_Pass_through__c.field-meta.xml
<CustomField>
    <fullName>Ground_Lease_Pass_through__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ground Lease Pass-through</label>
    <type>Checkbox</type>
</CustomField>