force-app/main/default/objects/Agreement__c/fields/Ground_Rent_at_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Ground_Rent_at_Purchase__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monthly Ground at Purchase (or Equiv)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>