force-app/main/default/objects/Agreement__c/fields/Ground_Rights_Rent__c.field-meta.xml
<CustomField>
    <fullName>Ground_Rights_Rent__c</fullName>
    <label>Ground Rights Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>