force-app/main/default/objects/Agreement__c/fields/Guyed_Wires_w_in_Parcel__c.field-meta.xml
<CustomField>
    <fullName>Guyed_Wires_w_in_Parcel__c</fullName>
    <label>Guyed Wires w/in Parcel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>