force-app/main/default/objects/Agreement__c/fields/HT_RevShare__c.field-meta.xml
<CustomField>
    <fullName>HT_RevShare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revenue Share</label>
    <type>Checkbox</type>
</CustomField>