force-app/main/default/objects/Agreement__c/fields/Index_Rate__c.field-meta.xml
<CustomField>
    <fullName>Index_Rate__c</fullName>
    <description>Latest UE Index rate user in SDP</description>
    <formula>Project__r.Project_Extension__r.Unit_Economics_Id__r.Index_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Latest Approved UE Index Rate</inlineHelpText>
    <label>Index Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>