force-app/main/default/objects/Agreement__c/fields/Initial_Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Initial_Installment_Amount__c</fullName>
    <label>Initial Installment  Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>