force-app/main/default/objects/Agreement__c/fields/Initial_Installment_Due__c.field-meta.xml
<CustomField>
    <fullName>Initial_Installment_Due__c</fullName>
    <label>Initial Installment Due</label>
    <type>Date</type>
</CustomField>