force-app/main/default/objects/Agreement__c/fields/Initial_Rent__c.field-meta.xml
<CustomField>
    <fullName>Initial_Rent__c</fullName>
    <label>Initial Amount**</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>