force-app/main/default/objects/Agreement__c/fields/Initial_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Initial_Term_Months__c</fullName>
    <label>Initial Term (Months)**</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>