force-app/main/default/objects/Agreement__c/fields/Installment_Payents__c.field-meta.xml
<CustomField>
    <fullName>Installment_Payents__c</fullName>
    <label>Installment Payents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>