force-app/main/default/objects/Agreement__c/fields/Is_Recon_Amendment_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Recon_Amendment_Required__c</fullName>
    <label>Is Recon Amendment Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>