force-app/main/default/objects/Agreement__c/fields/IWM_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>IWM_Launch_Date__c</fullName>
    <label>IWM Launch Date</label>
    <type>Date</type>
</CustomField>