force-app/main/default/objects/Agreement__c/fields/Landlord_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Legal_Name__c</fullName>
    <label>Landlord Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>