force-app/main/default/objects/Agreement__c/fields/Last_ground_rent_payment__c.field-meta.xml
<CustomField>
    <fullName>Last_ground_rent_payment__c</fullName>
    <label>Last ground rent payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>