force-app/main/default/objects/Agreement__c/fields/Last_Push_From_NG_To_Sitetracker__c.field-meta.xml
<CustomField>
    <fullName>Last_Push_From_NG_To_Sitetracker__c</fullName>
    <label>Last Push From NG To Sitetracker</label>
    <type>DateTime</type>
</CustomField>