force-app/main/default/objects/Agreement__c/fields/Lease_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Lease_Approval_Status__c</fullName>
    <defaultValue>&quot;Pending Approval&quot;</defaultValue>
    <label>Lease Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>