force-app/main/default/objects/Agreement__c/fields/Lease_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Lease_Term_Months__c</fullName>
    <label>Lease Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>