force-app/main/default/objects/Agreement__c/fields/Leased_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Leased_Sq_Ft__c</fullName>
    <label>Leased Sq Ft</label>
    <length>50</length>
    <type>Text</type>
</CustomField>