force-app/main/default/objects/Agreement__c/fields/LeaseNet_Current_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>LeaseNet_Current_Expiration_Date__c</fullName>
    <label>LeaseNet Current Expiration Date</label>
    <type>Date</type>
</CustomField>