force-app/main/default/objects/Agreement__c/fields/LeaseNet_Current_Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LeaseNet_Current_Term_Start_Date__c</fullName>
    <label>LeaseNet Current Term Start Date</label>
    <type>Date</type>
</CustomField>