force-app/main/default/objects/Agreement__c/fields/LeaseNet_Escalation_Amt_Rate__c.field-meta.xml
<CustomField>
    <fullName>LeaseNet_Escalation_Amt_Rate__c</fullName>
    <label>LeaseNet Escalation Amt Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>