force-app/main/default/objects/Agreement__c/fields/LeaseNet_Escalation_Timing__c.field-meta.xml
<CustomField>
    <fullName>LeaseNet_Escalation_Timing__c</fullName>
    <label>LeaseNet Escalation Timing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>