force-app/main/default/objects/Agreement__c/fields/LeaseNet_Escalation_Type__c.field-meta.xml
<CustomField>
    <fullName>LeaseNet_Escalation_Type__c</fullName>
    <label>LeaseNet Escalation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>