force-app/main/default/objects/Agreement__c/fields/LeaseNet_Initial_Rent__c.field-meta.xml
<CustomField>
    <fullName>LeaseNet_Initial_Rent__c</fullName>
    <label>LeaseNet Initial Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>