force-app/main/default/objects/Agreement__c/fields/LeaseNet_Next_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>LeaseNet_Next_Term_Months__c</fullName>
    <label>LeaseNet Next Term Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>