force-app/main/default/objects/Agreement__c/fields/LeaseNet_Reason__c.field-meta.xml
<CustomField>
    <fullName>LeaseNet_Reason__c</fullName>
    <label>LeaseNet Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Tower Rent</fullName>
            </value>
            <value>
                <fullName>Ground Rent Pass Through</fullName>
            </value>
            <value>
                <fullName>Collocation Revenue</fullName>
            </value>
            <value>
                <fullName>Microwave Rent</fullName>
            </value>
            <value>
                <fullName>Option Payment</fullName>
            </value>
            <value>
                <fullName>Deferred Rent Remainder-Ground</fullName>
            </value>
            <value>
                <fullName>Deferred Rent Remainder-Tower</fullName>
            </value>
            <value>
                <fullName>Sublease Rev Share</fullName>
            </value>
            <value>
                <fullName>Sales Tax</fullName>
            </value>
            <value>
                <fullName>Office Rent</fullName>
            </value>
            <value>
                <fullName>Amendment Rent-Collocation</fullName>
            </value>
            <value>
                <fullName>Collocation Pass-Through</fullName>
            </value>
            <value>
                <fullName>Tax Payment</fullName>
            </value>
            <value>
                <fullName>Installment Payment</fullName>
            </value>
            <value>
                <fullName>Rent Reduction</fullName>
            </value>
            <value>
                <fullName>Marketing Fee</fullName>
            </value>
            <value>
                <fullName>Amendment Rent-Tower</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>AAFES</fullName>
            </value>
            <value>
                <fullName>Initial Facility User Fee</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Rent Revenue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>