force-app/main/default/objects/Agreement__c/fields/LeaseNet_Rev_Share_Notes__c.field-meta.xml
<CustomField>
    <fullName>LeaseNet_Rev_Share_Notes__c</fullName>
    <label>LeaseNet Rev Share Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>