force-app/main/default/objects/Agreement__c/fields/LeaseNet_Revenue_Share__c.field-meta.xml
<CustomField>
    <fullName>LeaseNet_Revenue_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LeaseNet Revenue Share</label>
    <type>Checkbox</type>
</CustomField>