force-app/main/default/objects/Agreement__c/fields/LeaseNet_Type__c.field-meta.xml
<CustomField>
    <fullName>LeaseNet_Type__c</fullName>
    <label>LeaseNet Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>