force-app/main/default/objects/Agreement__c/fields/LeaseNetExternalID__c.field-meta.xml
<CustomField>
    <fullName>LeaseNetExternalID__c</fullName>
    <externalId>true</externalId>
    <label>LeaseNetExternalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>