force-app/main/default/objects/Agreement__c/fields/LeaseNetURL__c.field-meta.xml
<CustomField>
    <fullName>LeaseNetURL__c</fullName>
    <label>LeaseNetURL</label>
    <type>Url</type>
</CustomField>