force-app/main/default/objects/Agreement__c/fields/Legal_Hold_Comments__c.field-meta.xml
<CustomField>
    <fullName>Legal_Hold_Comments__c</fullName>
    <label>Legal Hold Comments</label>
    <type>TextArea</type>
</CustomField>