force-app/main/default/objects/Agreement__c/fields/Legal_Notes_Special_Provisions__c.field-meta.xml
<CustomField>
    <fullName>Legal_Notes_Special_Provisions__c</fullName>
    <label>Legal Notes/Special Provisions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>