force-app/main/default/objects/Agreement__c/fields/LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>LegalEntity__c</fullName>
    <label>Legal Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PARALLEL TOWERS III LLC</fullName>
            </value>
            <value>
                <fullName>PI Telecom Infrastructure LLC</fullName>
            </value>
            <value>
                <fullName>PI Tower LLC</fullName>
            </value>
            <value>
                <fullName>PI Tower Development LLC</fullName>
            </value>
            <value>
                <fullName>PARALLEL INFRASTRUCTURE HOLDINGS LLC</fullName>
            </value>
            <value>
                <fullName>Harmoni Towers AssetCo II LLC</fullName>
            </value>
            <value>
                <fullName>Alpha Towers PropCo III LLC</fullName>
            </value>
            <value>
                <fullName>Harmoni Towers AssetCo LLC</fullName>
            </value>
            <value>
                <fullName>Harmoni Towers Asset Co LLC</fullName>
            </value>
            <value>
                <fullName>PI MTA LLC</fullName>
            </value>
            <value>
                <fullName>Harmoni Towers Development Company LLC</fullName>
            </value>
            <value>
                <fullName>Harmoni Towers Infrastructure LLC</fullName>
            </value>
            <value>
                <fullName>Harmoni Towers Gateway LLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>