force-app/main/default/objects/Agreement__c/fields/Letter_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Letter_Sent_Date__c</fullName>
    <label>Letter Sent Date</label>
    <type>Date</type>
</CustomField>