force-app/main/default/objects/Agreement__c/fields/LMPS_Package_Number__c.field-meta.xml
<CustomField>
    <fullName>LMPS_Package_Number__c</fullName>
    <label>LMPS Package Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>