force-app/main/default/objects/Agreement__c/fields/MOA_Recorded__c.field-meta.xml
<CustomField>
    <fullName>MOA_Recorded__c</fullName>
    <label>MOA Recorded</label>
    <type>Date</type>
</CustomField>