force-app/main/default/objects/Agreement__c/fields/MOA_Sent__c.field-meta.xml
<CustomField>
    <fullName>MOA_Sent__c</fullName>
    <label>MOA Sent</label>
    <type>Date</type>
</CustomField>