force-app/main/default/objects/Agreement__c/fields/Modification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Modification_Notes__c</fullName>
    <label>Modification Notes</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>