force-app/main/default/objects/Agreement__c/fields/MOE_Recorded__c.field-meta.xml
<CustomField>
    <fullName>MOE_Recorded__c</fullName>
    <label>MOE Recorded</label>
    <type>Date</type>
</CustomField>