force-app/main/default/objects/Agreement__c/fields/MOE_Sent__c.field-meta.xml
<CustomField>
    <fullName>MOE_Sent__c</fullName>
    <label>MOE Sent</label>
    <type>Date</type>
</CustomField>