force-app/main/default/objects/Agreement__c/fields/MOL_Recorded__c.field-meta.xml
<CustomField>
    <fullName>MOL_Recorded__c</fullName>
    <label>MOL Recorded</label>
    <type>Date</type>
</CustomField>