force-app/main/default/objects/Agreement__c/fields/MOL_Sent__c.field-meta.xml
<CustomField>
    <fullName>MOL_Sent__c</fullName>
    <label>MOL Sent</label>
    <type>Date</type>
</CustomField>