force-app/main/default/objects/Agreement__c/fields/Monthly_Rent_Equivalent__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Rent_Equivalent__c</fullName>
    <label>Monthly Rent Equivalent(TBD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>