force-app/main/default/objects/Agreement__c/fields/MOO_Recorded__c.field-meta.xml
<CustomField>
    <fullName>MOO_Recorded__c</fullName>
    <label>MOO Recorded</label>
    <type>Date</type>
</CustomField>