force-app/main/default/objects/Agreement__c/fields/MOO_Sent__c.field-meta.xml
<CustomField>
    <fullName>MOO_Sent__c</fullName>
    <label>MOO Sent</label>
    <type>Date</type>
</CustomField>