force-app/main/default/objects/Agreement__c/fields/Net_Effect_Base_Rent__c.field-meta.xml
<CustomField>
    <fullName>Net_Effect_Base_Rent__c</fullName>
    <label>Net Effect Base Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>