force-app/main/default/objects/Agreement__c/fields/Net_Effect_Indexed_Capital__c.field-meta.xml
<CustomField>
    <fullName>Net_Effect_Indexed_Capital__c</fullName>
    <label>Net Effect Indexed Capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>