force-app/main/default/objects/Agreement__c/fields/Net_Effect_Primary_Rights_Rent__c.field-meta.xml
<CustomField>
    <fullName>Net_Effect_Primary_Rights_Rent__c</fullName>
    <label>Net Effect Primary Rights Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>