force-app/main/default/objects/Agreement__c/fields/Netgain_Agreement_Name__c.field-meta.xml
<CustomField>
    <fullName>Netgain_Agreement_Name__c</fullName>
    <formula>IF(
TEXT(Related_Agreement_Reason__c) = &quot;Marketing Fee&quot;,
Site__r.Site_ID__c + &apos;-50&apos;,IF(TEXT(Related_Agreement_Reason__c)=&quot;Ground Rent Pass-Through&quot;, Site__r.Site_ID__c + &apos;-02&apos;,
Name )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Netgain Agreement Name</label>
    <type>Text</type>
</CustomField>