force-app/main/default/objects/Agreement__c/fields/NetGain_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>NetGain_Internal_ID__c</fullName>
    <label>NetGain Internal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>