force-app/main/default/objects/Agreement__c/fields/NetGain_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>NetGain_Last_Updated__c</fullName>
    <label>NetGain Last Updated</label>
    <type>DateTime</type>
</CustomField>