force-app/main/default/objects/Agreement__c/fields/Netgain_Mod_Update_Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Netgain_Mod_Update_Status_Message__c</fullName>
    <label>Netgain Mod Update Status Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>