force-app/main/default/objects/Agreement__c/fields/NetGain_Modification_ID__c.field-meta.xml
<CustomField>
    <fullName>NetGain_Modification_ID__c</fullName>
    <label>NetGain Modification ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>