force-app/main/default/objects/Agreement__c/fields/Netgain_Modification_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Netgain_Modification_Last_Updated__c</fullName>
    <label>Netgain Modification Last Updated</label>
    <type>DateTime</type>
</CustomField>