force-app/main/default/objects/Agreement__c/fields/Netgain_Modification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Netgain_Modification_Notes__c</fullName>
    <label>Netgain Modification Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>