force-app/main/default/objects/Agreement__c/fields/NetGain_Status__c.field-meta.xml
<CustomField>
    <fullName>NetGain_Status__c</fullName>
    <defaultValue>&quot;Pending&quot;</defaultValue>
    <label>NetGain Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>